#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package ParCorAna
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-22
- replace inefficient averaging over color and finecolors with efficient
  numpy.bincount. Should greatly increase spead of viewer with many colors.
- do not require h5output or testH5output to be set for test_main or test_alt modes
  useful for debugging config file with no h5output.
- warn/error about finecolor file == 0 when color file != 0
- UserG2 refactors: debugPlot function, loadColorFile function, replaceSubsetsWithAverage
  make modifications to colors based on saturated pixels more explicit
	
Tag: V00-00-21:
- save unit test results into files in /reg/g/psdm/data_test ... so that
  unit tests can compare to previously computed output. 
- Extend unit tests to compare to previous output.
- Modify compare tool to ignore testH5out system_param in comparing output files.
	
	
Tag: V00-00-20:
- add debugging statements
- add many user_parms, in particular parameters to filter based on ipimbs
- add 'debug_plot' and support to see some of the IP/G2/IF at viewerUpdate
- add forwarding functions logInfo, logDebug, etc to UserG2
- only plot the delays for which there is a nonzero count, cleans up plots
- label x-axis for plots in time, not 120hz counter
- add example config file for ffb live & plotting
	
Tag: V00-00-19:
- fix bug in viewerFormNDArrays. After gathering data from all the workers, the
  starting offset of each worker was not calculated properly - all but the first had 
  the same offset. The unit tests were passing because I never tested against multiple
  workers. The unit tests now using both multiple servers and multiple workers.

Tag: V00-00-18: